--- a/index.html
+++ b/index.html
@@ -647,6 +647,10 @@
                 <img src="image/gallery-04.jpeg" alt="">
                 <img src="image/gallery-06.jpeg" alt="">
             </div>
+
+            <div>
+                <p>maram</p>
+            </div>
         </div>
         <p class="copyright">&copy;2024<span> Kamal </span> All Right Reserved</p>
     </div>
