--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <span class="no" data-background="hide">No</span>
             </div>
         </div>
-        <!-- <button class="reset-options">Reset Options</button> -->
+        <button class="reset-options">Reset Options</button>
 
     </div>
     <!-- End Settings Box -->
