--- a/index.html
+++ b/index.html
@@ -558,8 +558,18 @@
                 <div class="contact">
                     <h2>Request A Discount</h2>
                     <form action="">
-                        <input class="input" type="text" name="name" placeholder="Your Name...Gony zya">
-                        <input class="input" type="email" name="email" placeholder="Your Email...Exsampl89-7@gmail.com">
+                        <input class="input req" type="text" name="name" placeholder="Your Name...Gony zya">
+                        <small>This field required * </small>
+                        <input class="input req" type="email" name="email"
+                            placeholder="Your Email...Exsampl89-7@gmail.com">
+                        <small>This field required * </small>
+
+                        <div class="pass">
+                            <i class="fas fa-eye"></i>
+                            <input class="input req" type="password" name="pass" placeholder="PassWord...$Exsampl89">
+                            <small>This field required * </small>
+                        </div>
+
                         <input class="input" type="text" name="mobile" placeholder="Your Phone...+976 586 3494 953">
                         <textarea class="input" name="message" placeholder="Tell Us About Your Needs"></textarea>
                         <input class="submit" type="submit" value="Send">
