--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <img src="image/gallery-02.jpeg" alt="Image Nmber Six">
                     </div>
                 </div>
-                <div class="box">
+                <!-- <div class="box">
                     <div class="image">
                         <img src="image/gallery-08.jpeg" alt="Image Nmber Seven">
                     </div>
@@ -221,7 +221,7 @@
                     <div class="image">
                         <img src="image/gallery-07.jpeg" alt="Image Nmber Eight">
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="box">
                     <div class="image">
                         <img src="image/gallery-01.png" alt="Image Nmber Nine">
