--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <span style="width:70% ;"></span>
                     </li>
                     <li data-width="80%">
-                        <p>Python</p>
+                        <p>Php</p>
                         <span style="width:80% ;"></span>
                     </li>
                 </ul>
@@ -255,10 +255,11 @@
                     <div class="year">2021</div>
                     <div class="right">
                         <div class="content">
+                            <i class='bx bxl-c-plus-plus'></i>
                             <h3>C language</h3>
                             <div>
                                 <h4>Definition:
-                                    <p>C is a powerful general-purpose programming language that forms the
+                                    <p>is a powerful general-purpose programming language that forms the
                                         foundation of many modern languages.
                                     </p>
                                 </h4> <br>
@@ -277,10 +278,11 @@
                     <div class="clearfix"></div>
                     <div class="right">
                         <div class="content">
+                            <i class='bx bxl-java'></i>
                             <h3>Java</h3>
                             <div>
                                 <h4>Definition:
-                                    <p> Java is an object-oriented programming language known for its portability
+                                    <p>is an object-oriented programming language known for its portability
                                         across platforms.
                                     </p>
                                 </h4> <br>
@@ -300,10 +302,11 @@
                     <div class="clearfix"></div>
                     <div class="left">
                         <div class="content">
+                            <i class='bx bxl-python'></i>
                             <h3>Python</h3>
                             <div>
                                 <h4>Definition:
-                                    <p> Python is a high-level, interpreted language known for its readability and
+                                    <p>is a high-level, interpreted language known for its readability and
                                         versatility.
                                     </p>
                                 </h4> <br>
@@ -325,10 +328,11 @@
                     <div class="year">2022</div>
                     <div class="left">
                         <div class="content">
+                            <i class='bx bxl-html5'></i>
                             <h3>Html5</h3>
                             <div>
                                 <h4>Definition:
-                                    <p> HTML5 is the latest version of the markup language used to design and
+                                    <p>is the latest version of the markup language used to design and
                                         structure web pages.
                                     </p>
                                 </h4> <br>
@@ -347,10 +351,11 @@
                     <div class="clearfix"></div>
                     <div class="left">
                         <div class="content">
+                            <i class='bx bxl-css3'></i>
                             <h3>Css3</h3>
                             <div>
                                 <h4>Definition:
-                                    <p>CSS3 is a styling technology that enhances the visual appearance
+                                    <p> is a styling technology that enhances the visual appearance
                                         of web pages and adds appealing effects.
                                     </p>
                                 </h4> <br>
@@ -368,7 +373,8 @@
                     <div class="clearfix"></div>
                     <div class="right">
                         <div class="content">
-                            <h3>Applications about html5 and css</h3>
+                            <i class='bx bx-window-alt'></i>
+                            <h3 class="app">Applications about html5 and css</h3>
                             <div>
                                 <h4>Definition:
                                     <p>Using HTML5 and CSS we develop the structure and design of websites and
@@ -394,6 +400,7 @@
                     <div class="left">
                         <div class="content">
                             <h3>Java Script</h3>
+                            <i class='bx bxl-javascript'></i>
                             <div>
                                 <h4>Definition:
                                     <p>JavaScript is a versatile programming language used primarily for creating
@@ -489,7 +496,7 @@
                         <div class="person-info">
                             <img src="image/avatar-02.png" alt="">
                             <div class="info">
-                                <h4>Yasmine Aati</h4>
+                                <h4>Ali Aati</h4>
                                 <p>Founder & CEO at TechVision</p>
                             </div>
                         </div>
@@ -509,7 +516,7 @@
                         <div class="person-info">
                             <img src="image/avatar-04.png" alt="">
                             <div class="info">
-                                <h4>Lian Mohammed</h4>
+                                <h4>Khalil Mohammed</h4>
                                 <p>Managing Director at GreenTech</p>
                             </div>
                         </div>
@@ -608,28 +615,28 @@
             <div class="box">
                 <ul class="links">
                     <li>
-                        <i class='bx bxs-chevrons-right'></i>
+                        <i class='bx bx-mail-send'></i>
                         <p>Email: <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Visit Profile </a>
                         </p>
                     </li>
                     <li>
-                        <i class='bx bxs-chevrons-right'></i>
+                        <i class='bx bxl-upwork'></i>
                         <p>UpWork: <a href="https://www.upwork.com/freelancers/~01ce800fdf564a005d"
                                 target="_blank">Visit Profile </a></p>
                     </li>
                     <li>
-                        <i class='bx bxs-chevrons-right'></i>
+                        <i class='bx bxl-linkedin'></i>
                         <p>LinkedIn : <a href="https://www.linkedin.com/in/kamal-abuzarifa-777887330/"
                                 target="_blank">Visit Profile</a></p>
                     </li>
                     <li>
-                        <i class='bx bxs-chevrons-right'></i>
-                        <p>Mostaql: <a href="https://mostaql.com/u/kamal_zarifa" target="_blank">Visit Profile</a></p>
+                        <i class='bx bxl-github'></i>
+                        <p>github: <a href="https://github.com/kamalabuzarifa" target="_blank">Visit Profile</a>
+                        </p>
                     </li>
                     <li>
-                        <i class='bx bxs-chevrons-right'></i>
-                        <p>Khamsat: <a href="https://khamsat.com/user/kamal_zarifa" target="_blank">Visit Profile</a>
-                        </p>
+                        <i class='bx bx-radio-circle'></i>
+                        <p>Mostaql: <a href="https://mostaql.com/u/kamal_zarifa" target="_blank">Visit Profile</a></p>
                     </li>
                 </ul>
             </div>
@@ -647,7 +654,6 @@
                     <i class='bx bxs-phone-call'></i>
                     <div class="info">
                         <span>+972 59-323-6412</span>
-                        <span>+970 59-323-6412</span>
                     </div>
                 </div>
             </div>
