--- a/index.html
+++ b/index.html
@@ -149,6 +149,57 @@
         </div>
     </div>
     <!-- End About Us -->
+    <!-- Start Services -->
+    <div class="container">
+        <div class="services" id="services">
+            <h2 class="main-title">Services</h2>
+            <div class="container">
+                <div class="box">
+                    <i class="fas fa-user-shield fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-tools fa-4x"></i>
+                    <h3>Fixing Issues</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-map-marked-alt fa-4x"></i>
+                    <h3>Location</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-laptop-code fa-4x"></i>
+                    <h3>Coding</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-palette fa-4x"></i>
+                    <h3>Security</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+                <div class="box">
+                    <i class="fas fa-bullhorn fa-4x"></i>
+                    <h3>Marketing</h3>
+                    <div class="info">
+                        <a href="#">Details</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services -->
     <!-- Start Our Skills -->
     <div class="container" id="skills">
         <div class="our-skills">
@@ -212,36 +263,6 @@
                         <img src="image/gallery-02.jpeg" alt="Image Nmber Six">
                     </div>
                 </div>
-                <!-- <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-08.jpeg" alt="Image Nmber Seven">
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-07.jpeg" alt="Image Nmber Eight">
-                    </div>
-                </div> -->
-                <!-- <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-01.png" alt="Image Nmber Nine">
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-10.jpeg" alt="Image Nmber Ten">
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-11.jpeg" alt="Image Nmber Eleven">
-                    </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-12.jpeg" alt="Image Nmber Twelve">
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
