popup-box-details

--- a/index.html
+++ b/index.html
@@ -158,42 +158,66 @@
                     <i class="fas fa-user-shield fa-4x"></i>
                     <h3>Security</h3>
                     <div class="info">
-                        <a href="#">Details</a>
+                        <button class="details" >Details</button>
+                        <div class="divdetials">
+                            <h3>Security</h3>
+                            <p>"Protect your digital assets with top-notch security solutions. Our advanced tools and expert strategies safeguard your data, systems, and networks against evolving threats."</p>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fas fa-tools fa-4x"></i>
                     <h3>Fixing Issues</h3>
                     <div class="info">
-                        <a href="#">Details</a>
+                        <button class="details" >Details</button>
+                        <div class="divdetials">
+                            <h3>Fixing Issues</h3>
+                            <p>"Swift and reliable solutions for your technical challenges. We identify and resolve issues efficiently to keep your operations running smoothly."</p>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fas fa-map-marked-alt fa-4x"></i>
                     <h3>Location</h3>
                     <div class="info">
-                        <a href="#">Details</a>
+                        <button class="details" >Details</button>
+                        <div class="divdetials">
+                            <h3>Location</h3>
+                            <p>"Find us easily wherever you are. Explore our locations and services near you for seamless connectivity and support."</p>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fas fa-laptop-code fa-4x"></i>
                     <h3>Coding</h3>
                     <div class="info">
-                        <a href="#">Details</a>
+                        <button class="details" >Details</button>
+                        <div class="divdetials">
+                            <h3>Coding</h3>
+                            <p>"Transforming ideas into reality with clean, efficient, and innovative code. Build robust solutions tailored to your needs."</p>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fas fa-palette fa-4x"></i>
-                    <h3>Security</h3>
+                    <h3>Colors</h3>
                     <div class="info">
-                        <a href="#">Details</a>
+                        <button class="details" >Details</button>
+                        <div class="divdetials">
+                            <h3>Colors</h3>
+                            <p>"Bringing your vision to life with vibrant and harmonious color palettes. Let colors tell your story."</p>
+                        </div>
                     </div>
                 </div>
                 <div class="box">
                     <i class="fas fa-bullhorn fa-4x"></i>
                     <h3>Marketing</h3>
                     <div class="info">
-                        <a href="#">Details</a>
+                        <button class="details" >Details</button>
+                        <div class="divdetials">
+                            <h3>Marketing</h3>
+                            <p>"Drive your brand forward with creative marketing strategies. Engage, connect, and grow your audience effectively."</p>
+                        </div>
                     </div>
                 </div>
             </div>
