--- a/index.html
+++ b/index.html
@@ -478,7 +478,54 @@
     </div>
     <!-- End Timeline -->
     <!-- Start Features -->
-
+    <div class="container" id="features">
+        <div class="featuresm">
+            <h2 class="main-title">Features</h2>
+            <div class="features">
+                <div class="feat-box">
+                    <img src="image/features-01.jpeg" alt="">
+                    <h4>development</h4>
+                    <p>We create robust solutions tailored to your needs.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-02.jpeg" alt="">
+                    <h4>design</h4>
+                    <p>Crafting unique designs that inspire and engage.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-03.jpeg" alt="">
+                    <h4>test</h4>
+                    <p>Ensuring flawless performance through rigorous testing.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-04.jpeg" alt="">
+                    <h4>analysis</h4>
+                    <p>Delivering data-driven insights for better decisions.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-05.jpeg" alt="">
+                    <h4>Implementation</h4>
+                    <p>Seamless execution for exceptional outcomes.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-06.jpeg" alt="">
+                    <h4>Documentation</h4>
+                    <p>Clear and concise documentation for every step.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-07.jpeg" alt="">
+                    <h4>Maintenance</h4>
+                    <p>Keeping your systems running smoothly over time.</p>
+                </div>
+                <div class="feat-box">
+                    <img src="image/features-08.jpeg" alt="">
+                    <h4>program</h4>
+                    <p>Building innovative software to meet your goals.</p>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
     <!-- End Features -->
     <!-- Start Testimonials -->
     <div class="container" id="testimonials">
