--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Boxicons css -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link rel="website icon" href="image/image-profile.jpg" type="png">
 
 </head>
 
@@ -265,33 +266,68 @@
             <h2 class="main-title">Gallery</h2>
             <div class="gallery">
                 <div class="box">
-                    <div class="image">
+                    <div class="image front">
                         <img src="image/gallery-09.jpeg" alt="Image Nmber One">
                     </div>
+                    <div class="back">
+                        <h2>Image Nmber One</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
+                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
+                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                    </div>
                 </div>
                 <div class="box">
-                    <div class="image">
+                    <div class="image front">
                         <img src="image/gallery-06.jpeg" alt="Image Nmber Two">
                     </div>
+                    <div class="back">
+                        <h2>Image Nmber One</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
+                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
+                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                    </div>
                 </div>
                 <div class="box">
-                    <div class="image">
+                    <div class="image front">
                         <img src="image/gallery-03.jpeg" alt="Image Nmber Three">
                     </div>
+                    <div class="back">
+                        <h2>Image Nmber One</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
+                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
+                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                    </div>
                 </div>
                 <div class="box">
-                    <div class="image">
+                    <div class="image front">
                         <img src="image/gallery-04.jpeg" alt="Image Nmber Fore">
                     </div>
-                </div>
-                <div class="box">
-                    <div class="image">
-                        <img src="image/gallery-05.jpeg" alt="Image Nmber Five">
+                    <div class="back">
+                        <h2>Image Nmber One</h2>
+                        <p>“Learning is a continuous journey, and success comes only through hard work and effort. Think of every school day as a new opportunity to grow and achieve your dreams.
+                             Today we start a new chapter full of knowledge and fun challenges!”</p>
                     </div>
                 </div>
                 <div class="box">
-                    <div class="image">
+                    <div class="image front">
+                        <img src="image/gallery-05.jpeg" alt="Image Nmber Five">
+                    </div>
+                    <div class="back">
+                        <h2>Image Nmber One</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
+                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
+                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image front">
                         <img src="image/gallery-02.jpeg" alt="Image Nmber Six">
+                    </div>
+                    <div class="back">
+                        <h2>Image Nmber One</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
+                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
+                            laudantium perspiciatis hic. Quo, repudiandae.</p>
                     </div>
                 </div>
             </div>
