--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
 </head>
 
 <body>
-    <a href="#up" class="go-down">
-        <i class='bx bxs-chevrons-up'></i>
-    </a>
+    <div class="go-down">
+        <div class="page-indicator">
+            <div class="top">
+                <i class="fas fa-arrow-up"></i>
+            </div>
+        </div>
+    </div>
     <!-- Start Settings Box -->
     <div class="settings-box" data-color="#ff8c005c">
         <div class="toggle-settings">
@@ -58,6 +62,8 @@
                 <span class="no" data-background="hide">No</span>
             </div>
         </div>
+        <div class="options-box"></div>
+        <div class="options-box"></div>
         <button class="reset-options">Reset Options</button>
 
     </div>
@@ -233,7 +239,7 @@
     </div>
     <!-- End Services -->
     <!-- Start Our Skills -->
-    <div class="container" id="skills">
+    <div class="container" id="our-skills">
         <div class="our-skills">
             <h2 class="main-title">Skills</h2>
             <div class="containerm">
@@ -270,10 +276,9 @@
                         <img src="image/gallery-09.jpeg" alt="Image Nmber One">
                     </div>
                     <div class="back">
-                        <h2>Image Nmber One</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
-                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
-                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                        <img src="image/gallery-09.jpeg" alt="Image Nmber Two">
+                        <h2> User Control </h2>
+                        <p>“ A simplified interface to manage digital accounts and functions easily and quickly.!”</p>
                     </div>
                 </div>
                 <div class="box">
@@ -281,10 +286,10 @@
                         <img src="image/gallery-06.jpeg" alt="Image Nmber Two">
                     </div>
                     <div class="back">
-                        <h2>Image Nmber One</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
-                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
-                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                        <img src="image/gallery-06.jpeg" alt="Image Nmber Two">
+                        <h2>Interactive Learning </h2>
+                        <p>“ A smart platform that supports skill-based learning using innovative tools.!”
+                        </p>
                     </div>
                 </div>
                 <div class="box">
@@ -292,10 +297,9 @@
                         <img src="image/gallery-03.jpeg" alt="Image Nmber Three">
                     </div>
                     <div class="back">
-                        <h2>Image Nmber One</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
-                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
-                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                        <img src="image/gallery-03.jpeg" alt="Image Nmber Three">
+                        <h2> Cloud Technology</h2>
+                        <p>“ Modern Technologies to Improve Performance and Provide Integrated Remote Solutions.!”</p>
                     </div>
                 </div>
                 <div class="box">
@@ -303,9 +307,9 @@
                         <img src="image/gallery-04.jpeg" alt="Image Nmber Fore">
                     </div>
                     <div class="back">
-                        <h2>Image Nmber One</h2>
-                        <p>“Learning is a continuous journey, and success comes only through hard work and effort. Think of every school day as a new opportunity to grow and achieve your dreams.
-                             Today we start a new chapter full of knowledge and fun challenges!”</p>
+                        <img src="image/gallery-04.jpeg" alt="Image Nmber Fore">
+                        <h2> Digital Classroom</h2>
+                        <p>“ An interactive learning environment that supports collaboration using advanced technology.!”</p>
                     </div>
                 </div>
                 <div class="box">
@@ -313,10 +317,9 @@
                         <img src="image/gallery-05.jpeg" alt="Image Nmber Five">
                     </div>
                     <div class="back">
-                        <h2>Image Nmber One</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
-                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
-                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                        <img src="image/gallery-05.jpeg" alt="Image Nmber Five">
+                        <h2>Interactive Library</h2>
+                        <p>“Digital educational resources available to students and teachers anytime, anywhere.!”</p>
                     </div>
                 </div>
                 <div class="box">
@@ -324,10 +327,9 @@
                         <img src="image/gallery-02.jpeg" alt="Image Nmber Six">
                     </div>
                     <div class="back">
-                        <h2>Image Nmber One</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit doloremque natus
-                            tempora ad delectus in. Et, voluptatibus, repellendus quia vitae ex minus iure, quae labore
-                            laudantium perspiciatis hic. Quo, repudiandae.</p>
+                        <img src="image/gallery-02.jpeg" alt="Image Nmber Six">
+                        <h2> Technical Infrastructure</h2>
+                        <p>“Technical Designs for Improving Computing and Processing.!”</p>
                     </div>
                 </div>
             </div>
