--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="website icon" href="image/image-profile.jpg" type="png">
-
+    <!-- Use Swiper from CDN   -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -139,7 +140,7 @@
     </section>
     <!-- End Landing Page -->
     <!-- Start About Us -->
-    <div class="container" id="about">
+    <div class="contLine" id="about">
         <div class="about-us">
             <h2 class="main-title">About</h2>
             <div class="about">
@@ -157,7 +158,7 @@
     </div>
     <!-- End About Us -->
     <!-- Start Services  -->
-    <div class="container">
+    <div class="contLine">
         <div class="services" id="services">
             <h2 class="main-title">Services</h2>
             <div class="container">
@@ -239,7 +240,7 @@
     </div>
     <!-- End Services -->
     <!-- Start Our Skills -->
-    <div class="container" id="our-skills">
+    <div class="contLine" id="our-skills">
         <div class="our-skills">
             <h2 class="main-title">Skills</h2>
             <div class="containerm">
@@ -267,7 +268,7 @@
     </div>
     <!-- End Our Skills -->
     <!-- Start gallery -->
-    <div class="container" id="gallery">
+    <div class="contLine" id="gallery">
         <div class="gallrym">
             <h2 class="main-title">Gallery</h2>
             <div class="gallery">
@@ -309,7 +310,8 @@
                     <div class="back">
                         <img src="image/gallery-04.jpeg" alt="Image Nmber Fore">
                         <h2> Digital Classroom</h2>
-                        <p>“ An interactive learning environment that supports collaboration using advanced technology.!”</p>
+                        <p>“ An interactive learning environment that supports collaboration using advanced
+                            technology.!”</p>
                     </div>
                 </div>
                 <div class="box">
@@ -337,7 +339,7 @@
     </div>
     <!-- End gallery -->
     <!-- Start Timeline -->
-    <div class="container" id="timeline">
+    <div class="contLine" id="timeline">
         <div class="timelinem">
             <h2 class="main-title">Timeline</h2>
             <div class="timeline">
@@ -516,49 +518,73 @@
     </div>
     <!-- End Timeline -->
     <!-- Start Features -->
-    <div class="container" id="features">
+    <div class="contLine" id="features">
         <div class="featuresm">
             <h2 class="main-title">Features</h2>
-            <div class="features">
-                <div class="feat-box">
-                    <img src="image/features-01.jpeg" alt="">
-                    <h4>development</h4>
-                    <p>We create robust solutions tailored to your needs.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-02.jpeg" alt="">
-                    <h4>design</h4>
-                    <p>Crafting unique designs that inspire and engage.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-03.jpeg" alt="">
-                    <h4>test</h4>
-                    <p>Ensuring flawless performance through rigorous testing.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-04.jpeg" alt="">
-                    <h4>analysis</h4>
-                    <p>Delivering data-driven insights for better decisions.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-05.jpeg" alt="">
-                    <h4>Implementation</h4>
-                    <p>Seamless execution for exceptional outcomes.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-06.jpeg" alt="">
-                    <h4>Documentation</h4>
-                    <p>Clear and concise documentation for every step.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-07.jpeg" alt="">
-                    <h4>Maintenance</h4>
-                    <p>Keeping your systems running smoothly over time.</p>
-                </div>
-                <div class="feat-box">
-                    <img src="image/features-08.jpeg" alt="">
-                    <h4>program</h4>
-                    <p>Building innovative software to meet your goals.</p>
+            <div class="features swiper">
+                <div class="slider-wrapper">
+                    <div class="testimonials-content swiper-wrapper">
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-01.jpeg" alt="">
+                            <div class="info">
+                                <h4>development</h4>
+                                 <p>We create robust solutions tailored to your needs.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-02.jpeg" alt="">
+                            <div class="info">
+                                <h4>design</h4>
+                                <p>Crafting unique designs that inspire and engage.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-03.jpeg" alt="">
+                            <div class="info">
+                                <h4>test</h4>
+                                <p>Ensuring flawless performance through rigorous testing.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-04.jpeg" alt="">
+                            <div class="info">
+                                <h4>analysis</h4>
+                                <p>Delivering data-driven insights for better decisions.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-05.jpeg" alt="">
+                            <div class="info">
+                                <h4>Implementation</h4>
+                                <p>Seamless execution for exceptional outcomes.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-06.jpeg" alt="">
+                            <div class="info">
+                                <h4>Documentation</h4>
+                                <p>Clear and concise documentation for every step.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-07.jpeg" alt="">
+                            <div class="info">
+                                <h4>Maintenance</h4>
+                                 <p>Keeping your systems running smoothly over time.</p>
+                            </div>
+                        </div>
+                        <div class="feat-box swiper-slide">
+                            <img src="image/features-08.jpeg" alt="">
+                            <div class="info">
+                                <h4>program</h4>
+                                 <p>Building innovative software to meet your goals.</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
             <div class="clearfix"></div>
@@ -566,72 +592,120 @@
     </div>
     <!-- End Features -->
     <!-- Start Testimonials -->
-    <div class="container" id="testimonials">
+    <div class="contLine" id="testimonials">
         <div class="testimonialsm">
             <h2 class="main-title">testimonials</h2>
-            <div class="testimonials">
-                <div class="testimonials-content">
-                    <div class="ts-box">
-                        <p>Outstanding quality. Will definitely buy again!</p>
-                        <div class="person-info">
-                            <img src="image/avatar-01.png" alt="">
-                            <div class="info">
-                                <h4>Mohamed Hossam</h4>
-                                <p>CEO at SkyHigh Ventures</p>
+            <div class="testimonials swiper">
+                <div class="slider-wrapper">
+                    <div class="testimonials-content swiper-wrapper">
+                        <div class="ts-box swiper-slide">
+                            <p>Outstanding quality. Will definitely buy again!</p>
+                            <div class="person-info">
+                                <img src="image/avatar-01.png" alt="">
+                                <div class="info">
+                                    <div class="rate">
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                    <h4>Mohamed Hossam</h4>
+                                    <p>CEO at SkyHigh Ventures</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ts-box swiper-slide">
+                            <p>Amazing product with fast delivery and great price!</p>
+                            <div class="person-info">
+                                <img src="image/avatar-02.png" alt="">
+                                <div class="info">
+                                    <div class="rate">
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                    <h4>Ali Aati</h4>
+                                    <p>Founder & CEO at TechVision</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ts-box swiper-slide">
+                            <p>Excellent service and high-quality product. Highly recommend!</p>
+                            <div class="person-info">
+                                <img src="image/avatar-03.png" alt="">
+                                <div class="info">
+                                    <div class="rate">
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                    <h4>Walid Khaled</h4>
+                                    <p>Creative Director at InnovateLab</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ts-box swiper-slide">
+                            <p>Fast delivery and unbelievable price. Thank you!</p>
+                            <div class="person-info">
+                                <img src="image/avatar-04.png" alt="">
+                                <div class="info">
+                                    <div class="rate">
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                    <h4>Khalil Mohammed</h4>
+                                    <p>Managing Director at GreenTech</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ts-box swiper-slide">
+                            <p>Great customer service. Thank you so much!</p>
+                            <div class="person-info">
+                                <img src="image/avatar-05.png" alt="">
+                                <div class="info">
+                                    <div class="rate">
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                    <h4>Ahmed Yamen</h4>
+                                    <p>Product Manager at Elite Solutions</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ts-box swiper-slide">
+                            <p>The best product I’ve ever used. Absolutely amazing!</p>
+                            <div class="person-info">
+                                <img src="image/avatar-06.png" alt="">
+                                <!-- <img src="https://placehold.it/80/DDD" alt=""> -->
+                                <div class="info">
+                                    <div class="rate">
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="filled fas fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                        <i class="far fa-star"></i>
+                                    </div>
+                                    <h4>Nour Mohammed</h4>
+                                    <p>Head of Marketing at BrightFuture</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="ts-box">
-                        <p>Amazing product with fast delivery and great price!</p>
-                        <div class="person-info">
-                            <img src="image/avatar-02.png" alt="">
-                            <div class="info">
-                                <h4>Ali Aati</h4>
-                                <p>Founder & CEO at TechVision</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ts-box">
-                        <p>Excellent service and high-quality product. Highly recommend!</p>
-                        <div class="person-info">
-                            <img src="image/avatar-03.png" alt="">
-                            <div class="info">
-                                <h4>Walid Khaled</h4>
-                                <p>Creative Director at InnovateLab</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ts-box">
-                        <p>Fast delivery and unbelievable price. Thank you!</p>
-                        <div class="person-info">
-                            <img src="image/avatar-04.png" alt="">
-                            <div class="info">
-                                <h4>Khalil Mohammed</h4>
-                                <p>Managing Director at GreenTech</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ts-box">
-                        <p>Great customer service. Thank you so much!</p>
-                        <div class="person-info">
-                            <img src="image/avatar-05.png" alt="">
-                            <div class="info">
-                                <h4>Ahmed Yamen</h4>
-                                <p>Product Manager at Elite Solutions</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="ts-box">
-                        <p>The best product I’ve ever used. Absolutely amazing!</p>
-                        <div class="person-info">
-                            <img src="image/avatar-06.png" alt="">
-                            <!-- <img src="https://placehold.it/80/DDD" alt=""> -->
-                            <div class="info">
-                                <h4>Nour Mohammed</h4>
-                                <p>Head of Marketing at BrightFuture</p>
-                            </div>
-                        </div>
-                    </div>
+
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
             <!-- <div class="clearfix"></div> -->
@@ -639,7 +713,7 @@
     </div>
     <!-- End Testimonials -->
     <!-- Start Discount -->
-    <div class="container">
+    <div class="contLine">
         <div class="discount" id="discount">
             <div class="image">
                 <div class="content">
@@ -767,6 +841,7 @@
     </div>
     <!-- </div> -->
     <!-- End Footer -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/master.js"></script>
 </body>
 
