--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Spacial Design</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/master.css">
-    <!-- <link rel="stylesheet" href="css/all.min.css"> -->
+    <link rel="stylesheet" href="css/all.min.css">
 
     <!-- Font Family -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
-<body>
+<div>
     <div class="go-down">
         <div class="page-indicator">
             <div class="top">
@@ -76,7 +76,7 @@
 
             <ul class="main-nav">
                 <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="#our-skills">Skills</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li>
                     <a href="#">Other Links</a>
@@ -528,7 +528,7 @@
                             <img src="image/features-01.jpeg" alt="">
                             <div class="info">
                                 <h4>development</h4>
-                                 <p>We create robust solutions tailored to your needs.</p>
+                                <p>We create robust solutions tailored to your needs.</p>
                             </div>
                         </div>
                         <div class="feat-box swiper-slide">
@@ -570,18 +570,18 @@
                             <img src="image/features-07.jpeg" alt="">
                             <div class="info">
                                 <h4>Maintenance</h4>
-                                 <p>Keeping your systems running smoothly over time.</p>
+                                <p>Keeping your systems running smoothly over time.</p>
                             </div>
                         </div>
                         <div class="feat-box swiper-slide">
                             <img src="image/features-08.jpeg" alt="">
                             <div class="info">
                                 <h4>program</h4>
-                                 <p>Building innovative software to meet your goals.</p>
+                                <p>Building innovative software to meet your goals.</p>
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="swiper-pagination"></div>
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
@@ -591,7 +591,104 @@
         </div>
     </div>
     <!-- End Features -->
-    <!-- Start Testimonials -->
+    <!-- Start Work Steps -->
+    <div class="contLine">
+        <div class="work-steps" id="work-steps">
+            <h2 class="main-title" style="font-size: 20px;">How does it work?</h2>
+            <div class="workcont">
+                <img src="image/our-work.png" alt="our-work" class="image">
+                <div class="info">
+                    <div class="box">
+                        <img src="image/BusinessAnalysis.png" alt="Business Analysis">
+                        <div class="text">
+                            <h3>Business Analysis</h3>
+                            <p>
+                                Is the process of understanding business needs, identifying challenges, and proposing
+                                solutions to achieve
+                                organizational goals. It involves gathering requirements, analyzing processes, and
+                                collaborating with stakeholders to
+                                design effective strategies. The ultimate goal is to bridge the gap between business
+                                objectives and technology or
+                                process improvements.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="image/Architecture.png" alt="Architecture " />
+                        <div class="text">
+                            <h3>Architecture</h3>
+                            <p>
+                                Is the art and science of designing structures and systems. It balances function,
+                                aesthetics, and durability, ensuring
+                                spaces serve their purpose while inspiring creativity and connection. Each project
+                                begins with a vision, shaped by
+                                design principles, user needs, and environmental context, brought to life through
+                                planning and construction.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="image/Development.png" alt="Developement" />
+                        <div class="text">
+                            <h3>Developement</h3>
+                            <p>
+                                Is the journey of turning ideas into reality. It starts with planning, followed by
+                                design, programming, quality testing,
+                                and finally, deployment. Success depends on creativity, precision, and teamwork.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Work Steps -->
+    <!-- Start Events -->
+    <div class="contLine">
+        <div class="event" id="events">
+            <div class="dots dots-up"></div>
+            <div class="dots dots-down"></div>
+            <h2 class="main-title">Latest Events</h2>
+            <div class="container">
+                <img src="images/events.png" alt="">
+                <div class="info">
+                    <div class="time">
+                        <div class="unit">
+                            <span>15</span>
+                            <span>Days</span>
+                        </div>
+                        <div class="unit">
+                            <span>08</span>
+                            <span>Hours</span>
+                        </div>
+                        <div class="unit">
+                            <span>45</span>
+                            <span>Minutes</span>
+                        </div>
+                        <div class="unit">
+                            <span>55</span>
+                            <span>Seconds</span>
+                        </div>
+                    </div>
+                    <h2 class="title">
+                        Tech Masters Event 2021
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Et vero tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi nulla in harum,
+                        veritatis porro</p>
+                </div>
+                <div class="subscribe">
+                    <form action="">
+                        <input type="email" placeholder="Enter Your Email" />
+                        <input type="submit" value="Subscribe" />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Start Events -->
+    <!-- End Testimonials -->
     <div class="contLine" id="testimonials">
         <div class="testimonialsm">
             <h2 class="main-title">testimonials</h2>
@@ -843,6 +940,6 @@
     <!-- End Footer -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/master.js"></script>
-</body>
+    </body>
 
 </html>
